# lore

./: .envrc  .gitignore  .pre-commit-config.yaml  .worktree-todo-mapping.json  1  2025-12-30-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  Argcfile.sh  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  FOLLOWUP_ISSUES_CREATED.md  GROWTH.md  HOW_TO_CREATE_ISSUES.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_FOLDERS_INVENTORY.md  LAST_MODIFIED.md  LORE_CLI_README.md  LORE_TUI_README.md  MIGRATION_GUIDE.md  MIGRATION_ROADMAP.md  NAVIGATION.md  PROJECT_INDEX.md  QUICKSTART.md  QUICK_MIGRATION_REFERENCE.md  README.md  README_WORKTREE_SETUP.md  STATS.md  SYSTEM_PROMPT.md  consolidate_schemas.py  copy_all_knowledge.sh  create-migration-issues.sh  create-script-refactor-issues.sh  create_issues_from_script.py  demo_tui.py  generate-agent-lore.py  issues_data.json  lore  lore-data.js  lore-explorer.html  (+25 more)
.claude/: hookify.block-git-push-force.local.md  hookify.block-git-reset-hard.local.md  hookify.warn-diff-before-commit.local.md  hookify.warn-git-reset.local.md  settings.json  settings.local.json
.config/: wt.toml
.github/: copilot-instructions.md  workflow-config.yml
.lore-queue/: queue_1767616184_e9d3429a.json
.serena/: project.yml
.skogai/: CLAUDE.md  COMPLETE_KNOWLEDGE_REPORT.md  DOCUMENTATION.md  ENDPOINTS.md  SKOGAI_AGENT_PERSONALITIES.md  SKOGAI_COMPLETE_DOCUMENTATION.md  STATS.md  a.md  amy-core.md  amy.md
MASTER_KNOWLEDGE/: DUPLICATE_REPORT.json  INDEX.md  MERGE_MANIFEST.json  MERGE_SUMMARY.md
MASTER_KNOWLEDGE_COMPLETE/: MYTHOLOGY_MAP.md
agents/: prompts
assets/: todo-template.md
cache_home_skogix_.claude_projects_-mnt-warez-2025-06-24-skogai-git-BACKUP-skogai-knowledge-expanded/: b94c851a-0ae6-4901-8473-26549707cabb.jsonl
chronicles/: ARCHAEOLOGICAL_DISCOVERY_SKOGAI.md  README.md  historic-milestones.md
config/: CONFIGURATION_SUMMARY.md  README.md  __init__.py  lib.sh  paths.py  paths.sh  pre-commit-hook.sh  settings.py  test_config.py  test_config.sh  validate.sh
demo/: chat_ui_demo.py  content-workflow.sh  (+4 more)
(+3091 files in other folders)
