[project]
name = "skogai-lore"
version = "0.1.0"
description = "SkogAI Master Knowledge Repository - A comprehensive knowledge base and AI agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "gradio>=5.48.0",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "streamlit>=1.50.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pip>=25.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "config", "context", "integration", "orchestrator"]
